[tool.poetry]
name = "pycounts_kari"
version = "0.1.0"
description = "A tool for counting words."
authors = ["Katia A"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
